# skill-pattern-mine

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: academic-palettes.md  code-style.md  readme-format.md  setup.md
agents/: msg-labeler.md  pattern-labeler.md  taxonomy-builder.md
configs/: mine.yaml  msg_patterns.yaml  security_rules.yaml
data/artifact/: msg_instances.public.jsonl
eval/: __init__.py
eval/audit/: __init__.py  metrics.py
eval/label/: __init__.py  label_uncertainty.py  rq1.py  rq2.py  rq3.py  rq4.py  rq5.py  rq5_label_mismatch.py  utils.py
eval/mine/: __init__.py  instance_coverage.py  new_skill_addition.py
skills/iter-taxonomy-build/: SKILL.md  taxonomy.json
skills/iter-taxonomy-build/scripts/: iter.py  schemas.py  validate.py
skills/msg-labeling/: SKILL.md  msg_taxonomy.json
skills/msg-labeling/scripts/: validate.py
skills/pattern-labeling/: SKILL.md  taxonomy.json
skills/pattern-labeling/scripts/: schemas.py  validate.py
src/: common.py
src/analysis/: build_instances.py  sanitize_release.py
src/audit/: audit.html  build_audit.py  cochran.py  serve.py
src/label/: build.py  instance.py  sample.py
src/mine/: s01_search_repos.py  s02_mine_forks.py  s03_mine_diffs.py  s04_fetch_upstream.py  s05_filter_in_skill.py  s06_clean.py  s07_filtering_stats.py  utils.py
src/msg/: build_inputs.py  build_msg.py  msg.html  serve.py  tasks.js
tests/analysis/: test_dedup_branches.py  test_sanitize_release.py
tests/mine/: test_filter_in_skill.py
