[project]
name = "research-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
