[project]
name = "skill-pattern-mine"
version = "0.1.0"

readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }

dependencies = [
    "aiohttp",
    "matplotlib",
    "pydantic",
    "pyyaml",
    "tqdm",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/common.py holds cross-stage shared helpers (import common).
# Add audit/analysis/eval as those stages are migrated.
packages = ["src/mine", "src/label", "src/audit", "src/analysis"]
force-include = { "src/common.py" = "common.py" }
